--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -2,7 +2,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>nodeCMS</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    {{#each head}}
+        {{#if this.css}}
+            <link href="{{this.url}}" rel="stylesheet">
+        {{/if}}
+        {{#if this.js}}
+            <script src="{{this.url}}"></script>
+        {{/if}}
+    {{/each}}
 </head>
 <body class="bg-light">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
