--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -2,27 +2,30 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>nodeCMS</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
+
 <body class="bg-light">
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">{{menu.value}}</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-        {{#each menu.children}}
-            <li class="nav-item">
-                <a class="nav-link" href="#">{{value}}</a>
-            </li>
-        {{/each}}
-    </ul>
-  </div>
-</nav>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">{{menu.value}}</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                {{#each menu.children}}
+                <li class="nav-item">
+                    <a class="nav-link" href="#">{{value}}</a>
+                </li>
+                {{/each}}
+            </ul>
+        </div>
+    </nav>
     <div class="content text-light container-fluid">
         {{#if error}}
-            <div class="alert alert-danger"><i class="fa fa-exclamation-triangle"></i>&nbsp;&nbsp;{{error}}</div>
+        <div class="alert alert-danger"><i class="fa fa-exclamation-triangle"></i>&nbsp;&nbsp;{{error}}</div>
         {{/if}}
         {{{body}}}
     </div>
