--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -31,7 +31,7 @@
             </ul>
         </div>
     </nav>
-    <div class="content text-light container-fluid">
+    <div class="content text-dark container-fluid">
         {{#if error}}
         <div class="alert alert-danger"><i class="fa fa-exclamation-triangle"></i>&nbsp;&nbsp;{{error}}</div>
         {{/if}}
