--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -15,6 +15,7 @@
 </head>
 
 <body class="bg-light">
+    {{#if menu}}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">{{menu.value}}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -31,6 +32,7 @@
             </ul>
         </div>
     </nav>
+    {{/if}}
     <div class="content text-dark container-fluid">
         {{#if error}}
         <div class="alert alert-danger"><i class="fa fa-exclamation-triangle"></i>&nbsp;&nbsp;{{error}}</div>
