--- a/views/stock_404.handlebars
+++ b/views/stock_404.handlebars
@@ -1,4 +1,7 @@
-<div class="container text-center">
-        <p class="display-1">404 error</p>
-        <p class="display-3">I fing your luck of navigation disturbing</p>
+<div class="container text-center mt-5">
+        <p class="display-1">404 ERROR</p>
+        <p class="display-3">I find your luck of navigation disturbing</p>
+
+        <button type='button' class="btn btn-info mt-5"><a href='/home' style="color: white">Get back to
+                        safety</a></button>
 </div>
