--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,14 +1,27 @@
-
-<div class="container">
-    <div class="row">
-        <input type="email">
+<form action="" method="POST">
+    <div class="container">
+        <div class="align-self-center">
+        <div class="row justify-content-center">
+            <div class="col-6 input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon3">Username:</span>
+                </div>
+                <input type="email" class="form-control" id="email" name="email">
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-6 input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon3">Password:</span>
+                </div>
+                <input type="password" class="form-control" id="password" name="password">
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-6 input-group mb-3">
+                <input type="submit" value="Log In" class="col btn btn-primary">
+            </div>
+        </div>
+        </div>
     </div>
-    <div class="row">
-        <input type="password">
-
-    </div>
-    <div class="row">
-        <input type="submit">
-
-    </div>
-</div>
+</form>
