--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,10 +1,18 @@
 <form action="" method="POST">
     <div class="container">
-        <div class="align-self-center">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1 class="text-center">Node.CMS</h1>
+        <br>
+        <br>
         <div class="row justify-content-center">
             <div class="col-6 input-group mb-3">
                 <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon3">Username:</span>
+                    <span class="input-group-text">Username:</span>
                 </div>
                 <input type="email" class="form-control" id="email" name="email">
             </div>
@@ -12,7 +20,7 @@
         <div class="row justify-content-center">
             <div class="col-6 input-group mb-3">
                 <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon3">Password:</span>
+                    <span class="input-group-text">Password:</span>
                 </div>
                 <input type="password" class="form-control" id="password" name="password">
             </div>
