--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,7 +14,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">Username:</span>
                 </div>
-                <input type="email" class="form-control" id="email" name="email">
+                <input type="text" class="form-control" id="email" name="username">
             </div>
         </div>
         <div class="row justify-content-center">
