admin sidebar update

--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -1,21 +1,30 @@
 <div id="viewport">
     <!-- Sidebar -->
     <div class="bg-dark sidebar">
-        <header class="header bg-info p-3 text-center text-light">
-            <div>Admin</div>
-        </header>
-        <ul class="nav">
+        <div class="header bg-info p-3 text-center text-light">
+            <div class="h5">Admin</div>
+        </div>
+        <div class="text-light text-left dropright  mt-5">
+            <div class="text-muted pl-2 font-weight-bold">MAIN</div>
+            <div class="h6 mt-5 pl-4 pt-2 pb-2 menu">Menu 1</div>
+            <div class="h6 mt-5 pl-4 pt-2 pb-2 menu">Menu 1</div>
+            <div class="h6 mt-5 pl-4 pt-2 pb-2 menu">Menu 1</div>
+            <div class="h6 mt-5 pl-4 pt-2 pb-2 menu">Menu 1</div>
 
-        </ul>
+        </div>
     </div>
 
 
     <style>
         .sidebar {
             position: fixed;
-            left: 250px;
-            width: 250px;
+            left: 14vw;
+            width: 14vw;
             height: 100%;
-            margin-left: -250px;
+            margin-left: -14vw;
+        }
+
+        .menu:hover {
+            background: rgba(187, 186, 186, 0.171)
         }
     </style>
