--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -6,13 +6,24 @@
         </div>
         <div class="text-light text-left dropright  mt-5">
             <div class="text-muted pl-2 font-weight-bold">MAIN</div>
-            <div class="h6 mt-5 pl-4 pt-2 pb-2 menu">Menu 1</div>
+
+            <div class="btn-group dropright">
+                <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    Dropright
+                </button>
+                <div class="dropdown-menu">
+                    <!-- Dropdown menu links -->
+                </div>
+            </div>
             <div class="h6 mt-5 pl-4 pt-2 pb-2 menu">Menu 1</div>
             <div class="h6 mt-5 pl-4 pt-2 pb-2 menu">Menu 1</div>
             <div class="h6 mt-5 pl-4 pt-2 pb-2 menu">Menu 1</div>
 
         </div>
+
     </div>
+
 
 
     <style>
