finished Home.Menu & Update.Menu

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -20,7 +20,7 @@
     {{/each}}
 </head>
 
-<body class="bg-light">
+<body>
     {{#if menu}}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">{{menu.value}}</a>
