post page created on Intergation

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -53,12 +53,12 @@
                         <div class="col">
                             <div>
                                 <span class="uk-margin-small-right uk-text-emphasis" uk-icon="file"></span>
-                                <a>Pages</a>
+                                <a href="/admin/pages">Pages</a>
                             </div>
                             <br>
                             <div>
                                 <span class="uk-margin-small-right uk-text-emphasis" uk-icon="icon: file-text"></span>
-                                <a>Posts</a>
+                                <a href='admin/posts'>Posts</a>
                             </div>
                             <br>
                             <div>
