--- a/views/partials/admin.handlebars
+++ b/views/partials/admin.handlebars
@@ -18,7 +18,7 @@
                 <div class="uk-card uk-card-body p-2 ">
                     <div class="">
                         <span uk-icon="icon: code; ratio: 1"></span>
-                        Dashboard
+                        <a href="/admin" class="uk-text-emphasis">Dashboard</a>
                     </div>
                 </div>
                 <div uk-dropdown="pos: right-center">
@@ -38,21 +38,21 @@
                 <div class="uk-card uk-card-body p-2">
                     <div class="">
                         <span uk-icon="icon: link; ratio: 1"></span>
-                        Intergation
+                        <a href="/admin/pages" class="uk-text-emphasis">Intergation</a>
                     </div>
                 </div>
                 <div uk-dropdown="pos: right-center">
                     <ul class="uk-nav uk-dropdown-nav">
 
-                        <li><a href="#">Pages</a></li>
+                        <li><a href="/admin/pages">Pages</a></li>
                         <li class="uk-nav-divider"></li>
-                        <li><a href="#">Posts</a></li>
+                        <li><a href="/admin/posts">Posts</a></li>
                         <li class="uk-nav-divider"></li>
-                        <li><a href="#">Media</a></li>
+                        <li><a href="/admin/media">Media</a></li>
                         <li class="uk-nav-divider"></li>
-                        <li><a href="#">Comments</a></li>
+                        <li><a href="/admin/comments">Comments</a></li>
                         <li class="uk-nav-divider"></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="/admin/contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
